gcc/testsuite/gdc.test/runnable/imports/test17181c.d
module imports.test17181c;

int getA()()
{
    import imports.test17181a;
    return a;
}
